# QMLIcons

./: README.rst  iconprovider.cpp  iconprovider.h  qmlicons.pri
example/: CMakeLists.txt  iconloader.h  icons.qrc  main.cpp  main.qml  qmliconsexample.pro
example/icons/: codepoints.json
